plugins {
	id 'org.springframework.boot' version '2.4.0'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
	id "org.flywaydb.flyway" version "7.4.0"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'
targetCompatibility = '15'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}
/*
ext {
	set('springCloudVersion', "2020.0.0-M5")
}*/

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	compile (group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.4.2') {
		exclude group: 'io.lettuce', module: 'lettuce-core'
	}

	compile group: 'redis.clients', name: 'jedis', version: '3.4.1'
	runtimeOnly 'org.postgresql:postgresql'



	implementation 'org.springframework.boot:spring-boot-starter-web'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.0'
	compile group: 'org.springframework', name: 'spring-core', version: '5.3.2' //
	compile group: 'org.springframework', name: 'spring-webmvc', version: '5.3.2' //
	compile group: 'org.springframework', name: 'spring-tx', version: '5.3.2'
//	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.0'
//	compile group: 'org.springframework', name: 'spring-orm', version: '3.1.1.RELEASE'
//	implementation 'org.springframework.boot:spring-boot-starter-data-rest'

//	implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'

//	compile group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'

//	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
//	compile group: 'javax.activation', name: 'activation', version: '1.1'
//	compile group: 'javax.transaction', name: 'jta', version: '1.1'

	//auth

	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.1'
	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

	//excel
	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'

	compile group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '1.0.0'

	//json
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.0'

	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'



	compileOnly 'org.projectlombok:lombok:1.18.16'
	annotationProcessor 'org.projectlombok:lombok:1.18.16'


//	compile group: 'org.flywaydb', name: 'flyway-core', version: '7.4.0'


//	compile group: 'com.zaxxer', name: 'HikariCP', version: '2.3.2'

//	compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.24.Final'
//	compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.24.Final'
//	compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.0-api', version: '1.0.1.Final'
//	compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '4.1.0.Final'
//	compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.6.Final'
//	compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'

	//testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.5.1'

	//test
	testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
	//testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
	testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'

	testCompile "org.mockito:mockito-core:2.24.0"
	testCompile ("org.springframework.boot:spring-boot-starter-test") {
		exclude group: "org.mockito", module: "mockito-all"
	}
	testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.4.2'
//	testCompile group: 'org.springframework', name: 'spring-test', version: '5.3.2'

	testCompile group: 'junit', name: 'junit', version: '4.13.1'

	testCompileOnly 'org.projectlombok:lombok:1.18.16'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'

	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
	testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.7.0'

	testCompile group: 'io.takari.junit', name: 'takari-cpsuite', version: '1.2.7'

}
/*
dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}


flyway {
	url = 'jdbc:postgresql://127.0.0.1:5432/test'
	user = 'nikita'
	password = 'Mityuhan1312'
	locations = ['classpath:migrations']
}
*/
test {
	jvmArgs '--enable-preview'
	useJUnitPlatform()
}

task testSuite(type: Test) {
	include 'VkrApplicationTests.class'
}
